# swiggy-insights

./: .gitignore  README.md  pyproject.toml  swiggy.py
